infra/k8s/flags/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flags
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
